修复命令行无法下载的问题